6thJune2026.txt
use vit
switched to db vit
db.sales.drop()
true
db.sales.insertMany([
	{ "_id" : 1, "item" : "Americanos", "price" : 5, "size": "Short", "quantity" : 22, "date" : ISODate("2022-01-15T08:00:00Z") },
	{ "_id" : 2, "item" : "Cappuccino", "price" : 6, "size": "Short","quantity" : 12, "date" : ISODate("2022-01-16T09:00:00Z") },
	{ "_id" : 3, "item" : "Lattes", "price" : 15, "size": "Grande","quantity" : 25, "date" : ISODate("2022-01-16T09:05:00Z") },
	{ "_id" : 4, "item" : "Mochas", "price" : 25,"size": "Tall", "quantity" : 11, "date" : ISODate("2022-02-17T08:00:00Z") },
	{ "_id" : 5, "item" : "Americanos", "price" : 10, "size": "Grande","quantity" : 12, "date" : ISODate("2022-02-18T21:06:00Z") },
	{ "_id" : 6, "item" : "Cappuccino", "price" : 7, "size": "Tall","quantity" : 20, "date" : ISODate("2022-02-20T10:07:00Z") },
	{ "_id" : 7, "item" : "Lattes", "price" : 25,"size": "Tall", "quantity" : 30, "date" : ISODate("2022-02-21T10:08:00Z") },
	{ "_id" : 8, "item" : "Americanos", "price" : 10, "size": "Grande","quantity" : 21, "date" : ISODate("2022-02-22T14:09:00Z") },
	{ "_id" : 9, "item" : "Cappuccino", "price" : 10, "size": "Grande","quantity" : 17, "date" : ISODate("2022-02-23T14:09:00Z") },
	{ "_id" : 10, "item" : "Americanos", "price" : 8, "size": "Tall","quantity" : 15, "date" : ISODate("2022-02-25T14:09:00Z")}
]);
{
  acknowledged: true,
  insertedIds: {
    '0': 1,
    '1': 2,
    '2': 3,
    '3': 4,
    '4': 5,
    '5': 6,
    '6': 7,
    '7': 8,
    '8': 9,
    '9': 10
  }
}
db.sales.createIndex({ISODate:1})
ISODate_1
db.sales.getIndexes()
[
  { v: 2, key: { _id: 1 }, name: '_id_' },
  { v: 2, key: { ISODate: 1 }, name: 'ISODate_1' }
]
db.sales.createIndex({date:1})
date_1
db.sales.getIndexes()
[
  { v: 2, key: { _id: 1 }, name: '_id_' },
  { v: 2, key: { ISODate: 1 }, name: 'ISODate_1' },
  { v: 2, key: { date: 1 }, name: 'date_1' }
]
db.sales.find({
   "date" : ISODate("2022-02-21T10:08:00Z") }
})
SyntaxError: Unexpected token, expected "," (3:0)

  1 | db.sales.find({
  2 |    "date" : ISODate("2022-02-21T10:08:00Z") }
> 3 | })
    | ^
  4 |
db.sales.find({
   "date" : ISODate("2022-02-21T10:08:00Z") },
})
SyntaxError: Unexpected token (3:0)

  1 | db.sales.find({
  2 |    "date" : ISODate("2022-02-21T10:08:00Z") },
> 3 | })
    | ^
  4 |
db.sales.find({})
{
  _id: 1,
  item: 'Americanos',
  price: 5,
  size: 'Short',
  quantity: 22,
  date: 2022-01-15T08:00:00.000Z
}
{
  _id: 2,
  item: 'Cappuccino',
  price: 6,
  size: 'Short',
  quantity: 12,
  date: 2022-01-16T09:00:00.000Z
}
{
  _id: 3,
  item: 'Lattes',
  price: 15,
  size: 'Grande',
  quantity: 25,
  date: 2022-01-16T09:05:00.000Z
}
{
  _id: 4,
  item: 'Mochas',
  price: 25,
  size: 'Tall',
  quantity: 11,
  date: 2022-02-17T08:00:00.000Z
}
{
  _id: 5,
  item: 'Americanos',
  price: 10,
  size: 'Grande',
  quantity: 12,
  date: 2022-02-18T21:06:00.000Z
}
{
  _id: 6,
  item: 'Cappuccino',
  price: 7,
  size: 'Tall',
  quantity: 20,
  date: 2022-02-20T10:07:00.000Z
}
{
  _id: 7,
  item: 'Lattes',
  price: 25,
  size: 'Tall',
  quantity: 30,
  date: 2022-02-21T10:08:00.000Z
}
{
  _id: 8,
  item: 'Americanos',
  price: 10,
  size: 'Grande',
  quantity: 21,
  date: 2022-02-22T14:09:00.000Z
}
{
  _id: 9,
  item: 'Cappuccino',
  price: 10,
  size: 'Grande',
  quantity: 17,
  date: 2022-02-23T14:09:00.000Z
}
{
  _id: 10,
  item: 'Americanos',
  price: 8,
  size: 'Tall',
  quantity: 15,
  date: 2022-02-25T14:09:00.000Z
}
db.sales.find({
  "date" : ISODate("2022-02-21T10:08:00Z"),
})
{
  _id: 7,
  item: 'Lattes',
  price: 25,
  size: 'Tall',
  quantity: 30,
  date: 2022-02-21T10:08:00.000Z
}
db.users.insertMany([
   { email:  "john@test.com", name: "john"},
   { email:  "jane@test.com", name: "jane"},
]);
{
  acknowledged: true,
  insertedIds: {
    '0': ObjectId('6a241e9b8436d63b7e82d0b5'),
    '1': ObjectId('6a241e9b8436d63b7e82d0b6')
  }
}
db.users.createIndex({email:1},{unique:true});
email_1
db.users.insertOne(
   { email:  "john@test.com", name: "johny"}
);
MongoServerError: E11000 duplicate key error collection: vit.users index: email_1 dup key: { email: "john@test.com" }
db.users.drop()
true
db.users.insertMany([
   { email:  "john@test.com", name: "john"},
   { email:  "john@test.com", name: "johny"},
   { email:  "jane@test.com", name: "jane"},
])
{
  acknowledged: true,
  insertedIds: {
    '0': ObjectId('6a241ecb8436d63b7e82d0b8'),
    '1': ObjectId('6a241ecb8436d63b7e82d0b9'),
    '2': ObjectId('6a241ecb8436d63b7e82d0ba')
  }
}
db.users.createIndex({email: 1},{unique:true})
MongoServerError[DuplicateKey]: Index build failed: 81660b12-22b3-4384-918b-00c9f040ea91: Collection vit.users ( 9bff575a-f3f6-4e6d-af80-2970509628de ) :: caused by :: E11000 duplicate key error collection: vit.users index: email_1 dup key: { email: "john@test.com" }
db.users.deleteOne({name:'johny', email: 'john@test.com'});
{
  acknowledged: true,
  deletedCount: 1
}
db.users.createIndex({email: 1},{unique:true})
email_1
db.collection.createIndex({field1: 1, field2: 1}, {unique: true});
field1_1_field2_1
db.locations.insertOne({
	address: "Downtown San Jose, CA, USA",
	lat: 37.335480,
	long: -121.893028
})
{
  acknowledged: true,
  insertedId: ObjectId('6a241f038436d63b7e82d0bb')
}
db.locations.createIndex({
	lat: 1,
	long: 1
},{ unique: true });
lat_1_long_1
db.locations.insertOne({
	address: "Dev Bootcamp, San Jose, CA, USA",
	lat: 37.335480,
	long: -122.893028
})
{
  acknowledged: true,
  insertedId: ObjectId('6a241f298436d63b7e82d0bc')
}
db.locations.insertOne({
	address: "Central San Jose, CA, USA",
	lat: 37.335480,
	long: -121.893028
})
MongoServerError: E11000 duplicate key error collection: vit.locations index: lat_1_long_1 dup key: { lat: 37.33548, long: -121.893028 }
db.sales.createIndex({_id: 1, "date": 1})
_id_1_date_1
db.sales.find({_id: 2, "date" : ISODate("2022-01-16T09:00:00Z") }).explain('executionStats');
{
        isEOF: 1,
        nss: 'vit.sales',
        keyPattern: {
          _id: 1
        },
        indexName: '_id_',
        isMultiKey: false,
        isUnique: true,
        isSparse: false,
        isPartial: false,
        indexVersion: 2,
        direction: 'forward',
        indexBounds: {
          _id: [
            '[2, 2]'
          ]
        },
        keysExamined: 1,
        seeks: 1,
        dupsTested: 0,
        dupsDropped: 0,
        peakTrackedMemBytes: 0
      }
    }
  },
  queryShapeHash: '56919BB890D67C4F0B0BF92C563CD1C32F9622CF7F11C04B18800EFCD3F5B68C',
  command: {
    find: 'sales',
    filter: {
      _id: 2,
      date: 2022-01-16T09:00:00.000Z
    },
    '$db': 'vit'
  },
  serverInfo: {
    host: 'DESKTOP-REA10UU',
    port: 27017,
    version: '8.3.2',
    gitVersion: '89f54eb32e217d2f7bfcad50e5919f3033bb9611'
  },
  serverParameters: {
    internalQueryFacetBufferSizeBytes: 104857600,
    internalDocumentSourceGroupMaxMemoryBytes: 104857600,
    internalQueryMaxBlockingSortMemoryUsageBytes: 104857600,
    internalDocumentSourceSetWindowFieldsMaxMemoryBytes: 104857600,
    internalQueryFacetMaxOutputDocSizeBytes: 104857600,
    internalLookupStageIntermediateDocumentMaxSizeBytes: 104857600,
    internalQueryProhibitBlockingMergeOnMongoS: 0,
    internalQueryMaxAddToSetBytes: 104857600,
    internalQueryFrameworkControl: 'trySbeRestricted',
    internalQueryPlannerIgnoreIndexWithCollationForRegex: 1
  },
  ok: 1
}
db.sales.dropIndex("date")
{ nIndexesWas: 4, ok: 1 }
db.sales.createIndex({"item:1"})
SyntaxError: Unexpected token (1:30)

> 1 | db.sales.createIndex({"item:1"})
    |                               ^
db.sales.createIndex({"item":1})
item_1
db.sales.createIndex({"item":-1})
item_-1
db.sales.getIndexes()
[
  { v: 2, key: { _id: 1 }, name: '_id_' },
  { v: 2, key: { ISODate: 1 }, name: 'ISODate_1' },
  { v: 2, key: { date: 1 }, name: 'date_1' },
  { v: 2, key: { _id: 1, date: 1 }, name: '_id_1_date_1' },
  { v: 2, key: { item: 1 }, name: 'item_1' },
  { v: 2, key: { item: -1 }, name: 'item_-1' }
]
db.sales.dropIndex({"item":-1})
{ nIndexesWas: 6, ok: 1 }
db.sales.dropIndexes()
